[+] Adds ability to download visible log messages - see ticket #133:     https://github.com/PhilipSkinner/elemental-lowcode/issues/133 [*] Highlights the logs that are currently visible on the monitor [+] Adds blob logs to the monitor

--- a/src/ui.editor/interface/scss/components/monitor.scss
+++ b/src/ui.editor/interface/scss/components/monitor.scss
@@ -9,6 +9,12 @@
     margin-right: 0px;
   }
 
+  .monitorSystems {
+    .systemSelected {
+      font-weight: bold;
+    }
+  }
+
   #monitorContent {
     position: absolute;
     right: 0px;
